Some fixes to DTS.
Chop out the inclusion of imx6qdl-sabresd.dtsi; we're a Medianode board, not
a SABRE-SD board.

Comment out reference to pinctrl_hog_1.  We may have to empirically
determine what's appropriate for the Medianode board, if anything.

Tweak the USDHC entries, adding a GPIO callout for card detect, and adding
"no-1-8-v", for no other reason than the SABRE-SD board has it, too.

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -7,7 +7,6 @@
 /dts-v1/;
 
 #include "imx6dl.dtsi"
-#include "imx6qdl-sabresd.dtsi"
 
 / {
 	model = "Sensity Systems Medianode";
@@ -117,12 +116,15 @@
 &usdhc3 {
 	/*  FIXME: Reconfigure for 100MHz operation.  */
 	pinctrl-0 = <&pinctrl_usdhc3_2>;
+	cd-gpios = <&gpio6 11 0>;
+	no-1-8-v;
 	status = "okay";
 };
 
 &usdhc4 {
 	/*  FIXME: Reconfigure for 100MHz operation.  */
 	pinctrl-0 = <&pinctrl_usdhc4_1>;
+	no-1-8-v;
 	status = "okay";
 };
 
@@ -161,7 +163,7 @@
 &iomuxc {
 	pinctrl-names = "default";
 //	pinctrl-0 = <&pinctrl_hog_1>, <&pinctrl_hog_2>;
-	pinctrl-0 = <&pinctrl_hog_1>;
+//	pinctrl-0 = <&pinctrl_hog_1>;
 
 	ecspi1 {
 		pinctrl_ecspi1_mn: ecspi1grp-mn {
