DTS Tweaks -- Kernel now launches
Append "fsl,imx6dl" to "compatible" entry.  I suspect this is what got the
kernel finally booting, as it gave the standard iMX6 driver code something
to chew on.

Added entry describing our memory layout, which is, y'know, kinda important.

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -10,7 +10,11 @@
 
 / {
 	model = "Sensity Systems Medianode";
-	compatible = "sensity,medianode";
+	compatible = "sensity,medianode", "fsl,imx6dl";
+
+	memory {
+		reg = <0x10000000 0x40000000>;
+	};
 };
 
 &ecspi1 {
