Give the name "default" to the (sole) USDHC pin config.
Apparently even if you have only a single pin config for a USDHC interface,
you have to name it "default" or the driver won't find it.  So do that.

We now can boot to a shell prompt.  Woot!

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -119,6 +119,7 @@
 
 &usdhc3 {
 	/*  FIXME: Reconfigure for 100MHz operation.  */
+	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc3_2>;
 	cd-gpios = <&gpio6 11 0>;
 	no-1-8-v;
@@ -127,6 +128,7 @@
 
 &usdhc4 {
 	/*  FIXME: Reconfigure for 100MHz operation.  */
+	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_usdhc4_1>;
 	no-1-8-v;
 	status = "okay";
