Add PCIe placeholder in Medianode DTS.
Actually enabling the PCIe driver causes the kernel to hang very unusually
on boot, so don't actually add anything yet.  But preserve the GPIO
knowledge.

I'll probably be cutting over to the new Freescale beta branch after this.

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -141,6 +141,12 @@
 	status = "okay";
 };
 
+&pcie {
+//	pwr-gpios = <&gpio3 19 0>;	/* <&gpio1 27 0>; */
+//	rst-gpios = <&gpio7 12 0>;
+//	status = "okay";
+};
+
 &pwm1 {
 	pinctrl-0 = <&pinctrl_pwm1_2>;	/*  DISP0_DAT8  */
 	status = "okay";
