Fill out PCIe gpio defs.
We have two signals each for power-on, wake-up, and disable (one for each
slot).  Define all the mappings for slot 1; put slot 2 mappings in the
comments.

This clearly needs to be filled out more; only the PCI bridge is being
detected.

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -142,8 +142,10 @@
 };
 
 &pcie {
-	power-on-gpio = <&gpio3 19 0>;	/* <&gpio1 27 0>; */
+	power-on-gpio = <&gpio3 19 0>;	/*, <&gpio1 27 0>;  */
 	reset-gpio = <&gpio7 12 0>;
+	wake-up-gpio = <&gpio1 5 0>;	/*, <&gpio1 7 0>;  */
+	disable-gpio = <&gpio4 14 0>;	/*, <&gpio3 31 0>;  */
 	status = "okay";
 };
 
