Add SC16IS7x2 SPI-UART support (NOT_WORKING); DTS updates.
This is a port of Sarah's port of the SC16IS7x2 driver we found on the net.
The following changes have been made:
	- Changes to accommodate kernel/driver struct changes.
	- Add sc16is7x2_parse_dt() to do cheap DTS parsing support; invoke
	  it preferentially.
	- Establish DTS compatibility string "nxp,sc16is7x2".
	- Add call to spi_setup(), just in case...

DTS updates:
	- Added entry for ECSPI4.
	- Added "spidev" entries for all SPI channels (channel 3's commented
	  out).
	- Added sc16is7x2 node for ECSPI3.
	- Created "hog" pinmux entry for GPIO1_00, in the hope that's the
	  right thing to do to allow the interrupt to come through.

Created Kconfig entry for SERIAL_SC16IS7X2.

Created definition for PORT_SC16IS7X2 in serial_core.h.

Although the driver enumerates correctly, it is not yet working.  The driver
sees the TX FIFO as always full, even after first open.  Work ongoing.

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -17,27 +17,75 @@
 	};
 };
 
+/*  Use native chipselects for all SPI channels.  */
 &ecspi1 {
 	/*  All signals go out on connector J23.  */
 	fsl,spi-num-chipselects = <1>;
+	cs-gpios = <0>;		// <&gpio4 9 0>;	/*  KEY_ROW1  */
 	pinctrl-0 = <&pinctrl_ecspi1_mn>;
 	status = "okay";
+
+	spidev@0 {
+		compatible = "spidev";
+		spi-max-frequency = <12000000>;
+		reg = <0>;
+	};
 };
 
 &ecspi2 {
 	/*  All signals go out on connector J23.  */
 	fsl,spi-num-chipselects = <1>;
+	cs-gpios = <0>;		// <&gpio2 26 0>;	/*  EIM_RW  */
 	pinctrl-0 = <&pinctrl_ecspi2_mn>;
 	status = "okay";
+
+	spidev@0 {
+		compatible = "spidev";
+		spi-max-frequency = <12000000>;
+		reg = <0>;
+	};
 };
 
 &ecspi3 {
 	/*  All signals go out on connector J23.  */
 	fsl,spi-num-chipselects = <1>;
+	cs-gpios = <0>;		// <&gpio4 24 0>;	/*  DISP0_DAT03  */
 	pinctrl-0 = <&pinctrl_ecspi3_mn>;
 	status = "okay";
 
-	/*  FIXME: Add SPI-UART bridge def here.  */
+	spi_uart: sc16is7x2@0 {
+		#address-cells = <1>;
+		#size-cells = <1>;
+		compatible = "nxp,sc16is7x2";
+		spi-max-frequency = <12000000>;
+		reg = <0>;
+		uartclk = <1843200>;
+		uart_base = <0>;
+		gpio_base = <224>;	/*  <&gpio7 0 0> ?  */
+		interrupt-parent = <&gpio1>;
+		interrupts = <0 2>;
+	};
+	
+	/*  Entry for basic bus testing.  */
+//	spidev@0 {
+//		compatible = "spidev";
+//		spi-max-frequency = <12000000>;
+//		reg = <0>;
+//	};
+};
+
+&ecspi4 {
+	/*  All signals go out on connector J23.  */
+	fsl,spi-num-chipselects = <1>;
+	cs-gpios = <0>;		// <&gpio3 20 0>;	/*  EIM_D20  */
+	pinctrl-0 = <&pinctrl_ecspi4_mn>;
+	status = "okay";
+
+	spidev@0 {
+		compatible = "spidev";
+		spi-max-frequency = <12000000>;
+		reg = <0>;
+	};
 };
 
 &i2c1 {
@@ -176,8 +224,7 @@
 
 &iomuxc {
 	pinctrl-names = "default";
-//	pinctrl-0 = <&pinctrl_hog_1>, <&pinctrl_hog_2>;
-//	pinctrl-0 = <&pinctrl_hog_1>;
+	pinctrl-0 = <&pinctrl_hog_mn>;
 
 	ecspi1 {
 		pinctrl_ecspi1_mn: ecspi1grp-mn {
@@ -210,6 +257,17 @@
 				MX6QDL_PAD_DISP0_DAT1__ECSPI3_MOSI	0x100b1
 				MX6QDL_PAD_DISP0_DAT0__ECSPI3_SCLK	0x100b1
 				MX6QDL_PAD_DISP0_DAT3__ECSPI3_SS0	0x100b1
+			>;
+		};
+	};
+
+	ecspi4 {
+		pinctrl_ecspi4_mn: ecspi4grp-mn {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_D22__ECSPI4_MISO		0x100b1
+				MX6QDL_PAD_EIM_D28__ECSPI4_MOSI		0x100b1
+				MX6QDL_PAD_EIM_D21__ECSPI4_SCLK		0x100b1
+				MX6QDL_PAD_EIM_D20__ECSPI4_SS0		0x100b1
 			>;
 		};
 	};
@@ -283,6 +341,16 @@
 		};
 	};
 
+	/*  Why did I do this?  */
+	hog {
+		pinctrl_hog_mn: hoggrp-mn {
+			fsl,pins = <
+				/*  SPI DUART IRQ line.  */
+				MX6QDL_PAD_GPIO_0__GPIO1_IO00	0x80000000
+			>;
+		};
+	};
+//---
 //	hog {
 //		pinctrl_hog_2: hoggrp-2 {
 //			fsl,pins = <
