Add DTS entries for pwm-leds.
Our floodlights are built out of LEDs, and their brightness is controlled by
PWMs.  Linux has a facility for controlling LEDs through a PWM, so...

Add DTS entries describing the two PWM channels controlling the floodlights'
brightness.

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -15,6 +15,21 @@
 	memory {
 		reg = <0x10000000 0x40000000>;
 	};
+
+	pwm-floods {
+		compatible = "pwm-leds";
+
+		flood0 {
+			label = "medianode::flood0";
+			pwms = <&pwm1 0 20000>;	/*  50KHz cycle  */
+			max-brightness = <255>;
+		};
+		flood1 {
+			label = "medianode::flood1";
+			pwms = <&pwm2 0 20000>;	/*  50KHz cycle  */
+			max-brightness = <255>;
+		};
+	};
 };
 
 /*  Use native chipselects for all SPI channels.  */
