Enable USB hub(s) in DTS.
Add DTS nodes to enable USB hubs.  Unfortunately, even though the hubs appear,
they don't appear to be enumerating anything yet...

--- a/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
+++ b/arch/arm/boot/dts/imx6dl-sensity_medianode.dts
@@ -246,6 +246,19 @@
 	status = "okay";
 };
 
+&usbh1 {
+	//vbus-supply = <&reg_usb_h1_vbus>;
+	status = "okay";
+};
+
+&usbotg {
+	//vbus-supply = <&reg_usb_otg_vbus>;
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usbotg_2>;
+	disable-over-current;
+	status = "okay";
+};
+
 &iomuxc {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_hog_mn>;
