--- a/arch/arm/configs/medianode_defconfig
+++ b/arch/arm/configs/medianode_defconfig
@@ -299,6 +299,7 @@ CONFIG_ARCH_MXC=y
 # CONFIG_MXC_IRQ_PRIOR is not set
 CONFIG_MXC_TZIC=y
 # CONFIG_MXC_DEBUG_BOARD is not set
+CONFIG_HAVE_IMX_RNG=y
 CONFIG_HAVE_IMX_ANATOP=y
 CONFIG_HAVE_IMX_GPC=y
 CONFIG_HAVE_IMX_MMDC=y
@@ -389,6 +390,8 @@ CONFIG_PL310_ERRATA_588369=y
 # CONFIG_ARM_ERRATA_643719 is not set
 # CONFIG_ARM_ERRATA_720789 is not set
 CONFIG_PL310_ERRATA_727915=y
+CONFIG_ARM_ERRATA_794072=y
+CONFIG_ARM_ERRATA_761320=y
 # CONFIG_PL310_ERRATA_753970 is not set
 CONFIG_ARM_ERRATA_754322=y
 # CONFIG_ARM_ERRATA_754327 is not set
@@ -1537,12 +1540,14 @@ CONFIG_FSL_OTP=y
 CONFIG_HW_RANDOM=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
 # CONFIG_HW_RANDOM_ATMEL is not set
+CONFIG_HW_RANDOM_IMX_RNG=m
 # CONFIG_HW_RANDOM_EXYNOS is not set
 # CONFIG_R3964 is not set
 # CONFIG_APPLICOM is not set
 # CONFIG_RAW_DRIVER is not set
 # CONFIG_TCG_TPM is not set
 CONFIG_DEVPORT=y
+# CONFIG_MXS_VIIM is not set
 CONFIG_I2C=y
 CONFIG_I2C_BOARDINFO=y
 # CONFIG_I2C_COMPAT is not set
@@ -2317,6 +2322,7 @@ CONFIG_FB_MXC_EDID=y
 CONFIG_FB_MXC_EINK_PANEL=y
 # CONFIG_FB_MXC_EINK_AUTO_UPDATE_MODE is not set
 # CONFIG_FB_MXS_SII902X is not set
+# CONFIG_HANNSTAR_CABC is not set
 
 #
 # Console display driver support
